# CNet

./: CMakeLists.txt  README.md  dataframe.cpp  dataframe.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h  utils.cpp  utils.h
